# nosleep

./: .gitignore  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/nuklear/: nuklear.h  nuklear_gdi.h  nuklear_glfw_gl2.h
src/: App.cpp  App.hpp  Primitives.hpp  SleepPrevention.cpp  SleepPrevention.hpp  Window.cpp  Window.hpp  WindowUtils.hpp  main.cpp
